Trying to fix overly long words that don't wrap correctly on fuego.

--- a/_scss/bbg/_fuego.scss
+++ b/_scss/bbg/_fuego.scss
@@ -132,6 +132,7 @@
 		weight: bold;
 	}
 	padding-left: $bbg-avatar-twitter + 10px;
+	word-wrap: break-word;
 }
 
 .bbg-fuego__twitter__quoted-tweet {
@@ -144,4 +145,5 @@
 
 .bbg-fuego__twitter__quote-text {
 	padding-left: $bbg-avatar-twitter + 10px;
+	word-wrap: break-word;
 }
